--- a/css/style.css
+++ b/css/style.css
@@ -300,14 +300,14 @@ template {
 }
 @font-face {
   font-family: 'Venus Rising';
-  src: url("../../fonts/VenusRisingCyrillic.woff2") format("woff2"), url("../../fonts/VenusRisingCyrillic.woff") format("woff");
+  src: url("../fonts/VenusRisingCyrillic.woff2") format("woff2"), url("../fonts/VenusRisingCyrillic.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url("../../fonts/Roboto-Regular.woff2") format("woff2"), url("../../fonts/Roboto-Regular.woff") format("woff");
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -563,7 +563,7 @@ html, body {
   font-size: 14px;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1040px) {
   body.lock {
     overflow: hidden;
   }
@@ -716,7 +716,7 @@ html, body {
   }
 }
 
-@media screen and (max-width: 1020px) and (max-width: 630px) {
+@media screen and (max-width: 1024px) and (max-width: 630px) {
   .container {
     padding: 5px 35px;
   }
