--- a/css/style.css
+++ b/css/style.css
@@ -793,12 +793,15 @@ html, body {
 
 @media screen and (max-width: 1230px) {
   .advantages__wrapper {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    height: 960px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -811,7 +814,6 @@ html, body {
             align-items: stretch;
     -ms-flex-line-pack: distribute;
         align-content: space-around;
-    height: 720px;
   }
   .advantages__item {
     -ms-flex-pack: distribute;
@@ -853,6 +855,20 @@ html, body {
   }
 }
 
+@media screen and (max-width: 860px) {
+  .advantages__wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    height: 960px;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .advantages {
     margin-bottom: 60px;
@@ -861,13 +877,22 @@ html, body {
     font-size: 16px;
     line-height: 19px;
   }
+  .advantages__descr {
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 22px;
+    text-align: center;
+    color: #232523;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
   .advantages__item {
     display: block;
     position: relative;
-    width: 100%;
     max-height: 100px;
-    height: 100%;
-    min-height: 1000%;
+    min-height: 48px;
+    height: 48px;
     margin-bottom: 20px;
     -webkit-box-flex: 0;
         -ms-flex-positive: 0;
