--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*!
+ * Bootstrap Reboot v4.3.1 (https://getbootstrap.com/)
+ * Copyright 2011-2019 The Bootstrap Authors
+ * Copyright 2011-2019 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
+ */
 *, ::after, ::before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -541,19 +548,22 @@ html, body {
     line-height: 17px;
     margin: 40px 0 50px;
   }
-  .nav-link {
+  nav.navbar .promo__wrapper {
+    margin-top: 100px;
+    margin-bottom: 40px;
+  }
+  nav.navbar .nav-link {
     font-size: 14px;
   }
-  .nav-item {
+  nav.navbar .nav-item {
     margin-left: 22px;
   }
-  .nav-item:hover {
+  nav.navbar .nav-item:hover {
     text-decoration: none;
   }
-}
-
-.header__wrapper__link {
-  font-size: 14px;
+  .header__wrapper__link {
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -709,59 +719,208 @@ html, body {
   }
 }
 
-@media screen and (max-width: 1024px) and (max-width: 630px) {
+@media screen and (max-width: 1024px) and (max-width: 940px) {
+  .button_main {
+    margin-top: 0;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .header__wrapper {
+    position: fixed;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+  }
+  .header__wrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #feffff;
+    z-index: 2;
+  }
+  .header__wrapper .container {
+    max-width: 1174px;
+    margin: 0 auto;
+  }
+  .header__wrapper__body {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100px;
+  }
+  .header__wrapper__logo {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30px;
+            flex: 0 0 30px;
+    width: 25px;
+    height: 30px;
+  }
+  .promo__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 0px;
+  }
+  .container {
+    padding: 5px 35px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .header__wrapper {
+    position: fixed;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+  }
+  .header__wrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #feffff;
+    z-index: 2;
+  }
+  .header__wrapper .container {
+    max-width: 1174px;
+    margin: 0 auto;
+  }
+  .header__wrapper__body {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100px;
+  }
+  .header__wrapper__logo {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30px;
+            flex: 0 0 30px;
+    width: 25px;
+    height: 30px;
+  }
+  .promo__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 0px;
+  }
   .container {
     padding: 5px 35px;
   }
 }
 
 .advantages {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin-bottom: 120px;
 }
 
 .advantages__wrapper {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: -20px;
+}
+
+.advantages__wrapper-left {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: stretch;
       -ms-flex-pack: stretch;
           justify-content: stretch;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
-  height: 520px;
+}
+
+.advantages__wrapper-right {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
 }
 
 .advantages__item {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 540px;
-  max-height: 100px;
-  min-height: 100px;
-  height: 100px;
-  margin-bottom: 20px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  display: block;
+  width: calc(50% - 40px);
+  padding: 22px 28px;
+  margin-bottom: 40px;
+  margin: 20px;
   border: 1px solid #0B2235;
   border-radius: 10px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
 }
 
 .advantages__item span {
@@ -770,9 +929,11 @@ html, body {
   color: #FD460E;
   font-weight: 700;
   font-size: 32px;
-  line-height: 38px;
+  line-height: 34px;
   left: -20px;
   top: 50%;
+  padding: 5px;
+  background-color: #fff;
   transform: translate(0, -50%);
   -webkit-transform: translate(0, -50%);
   -moz-transform: translate(0, -50%);
@@ -782,134 +943,99 @@ html, body {
 
 .advantages__descr {
   font-family: 'Roboto';
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  color: #232523;
-  padding-top: 22px;
-  padding-bottom: 22px;
-}
-
-@media screen and (max-width: 1230px) {
-  .advantages__wrapper {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    height: 960px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: stretch;
-        -ms-flex-pack: stretch;
-            justify-content: stretch;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -ms-flex-line-pack: distribute;
-        align-content: space-around;
-  }
-  .advantages__item {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    margin-left: -20px;
-    padding-left: 20px;
-  }
-  .advantages__item span {
-    font-size: 32px;
-    line-height: 38px;
-  }
-}
-
-@media screen and (max-width: 1130px) {
-  .advantages__wrapper {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 100%;
-  }
-  .advantages__item {
-    display: block;
-    position: relative;
-    width: 100%;
-    min-height: 100px;
-    margin-bottom: 20px;
-    -webkit-box-flex: 0;
-        -ms-flex-positive: 0;
-            flex-grow: 0;
-  }
-  .advantages__item span {
-    position: absolute;
-    font-family: 'Roboto';
-    color: #FD460E;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-  }
 }
 
 @media screen and (max-width: 860px) {
-  .advantages__wrapper {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    height: 960px;
+  .advantages {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin-bottom: 50px;
+  }
+  .advantages__item {
+    width: 100%;
+  }
+  .advantages__item {
+    padding: 10px 30px;
+    margin: 0 20px 20px 20px;
+  }
+  .advantages__item span {
+    left: -16px;
+    padding: 0px;
+  }
+  .item-2 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .item-3 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .item-4 {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .item-5 {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  .item-6 {
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
+  }
+  .item-7 {
+    -webkit-box-ordinal-group: 7;
+        -ms-flex-order: 6;
+            order: 6;
+  }
+  .item-8 {
+    -webkit-box-ordinal-group: 8;
+        -ms-flex-order: 7;
+            order: 7;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .advantages {
-    margin-bottom: 60px;
-  }
-  .advantages__title.title {
-    font-size: 16px;
-    line-height: 19px;
-  }
-  .advantages__descr {
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 22px;
-    text-align: center;
-    color: #232523;
-    padding-top: 20px;
-    padding-bottom: 20px;
+  .advantages__item {
+    width: 100%;
   }
   .advantages__item {
-    display: block;
-    position: relative;
-    max-height: 100px;
-    min-height: 48px;
-    height: 48px;
-    margin-bottom: 20px;
-    -webkit-box-flex: 0;
-        -ms-flex-positive: 0;
-            flex-grow: 0;
+    padding: 10px 30px;
+    margin: 0 20px 10px 20px;
+    font-size: 15px;
+    line-height: 18px;
   }
   .advantages__item span {
-    font-size: 14px;
-    line-height: 16px;
-    left: -9px;
+    font-size: 18px;
+    line-height: 20px;
+    left: -10px;
   }
   .advantages__descr {
-    font-size: 11px;
-    line-height: 13px;
-    text-align: center;
-    color: #232523;
-    padding: 10px 18px;
-    border-radius: 10px;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .advantages__item {
+    width: 100%;
+  }
+  .advantages__item {
+    padding: 10px 30px;
+    margin: 0 20px 10px 20px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .advantages__item span {
+    font-size: 18px;
+    line-height: 20px;
+    left: -10px;
+  }
+  .advantages__descr {
+    font-size: 15px;
   }
 }
 
@@ -1145,6 +1271,7 @@ html, body {
   max-height: 120px;
   height: 120px;
   border: 1px solid #000;
+  border-radius: 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -1152,6 +1279,9 @@ html, body {
 .study__card__icon {
   padding: 2px;
   overflow: hidden;
+  margin: 19px 21px 19px 31px;
+  background: #0b2235;
+  background: radial-gradient(circle, #0b2235 83%, white 99%);
 }
 
 .study__card__icon img {
@@ -1162,6 +1292,48 @@ html, body {
 .study__wrapper-right {
   padding: 52px 61px;
   width: 50%;
+  border-radius: 10px;
+}
+
+.study__wrapper-right ul {
+  margin-bottom: 40px;
+}
+
+.study__wrapper-right ul,
+.study__wrapper-right ul li {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.study__wrapper-right ul li {
+  margin-left: 37px;
+}
+
+.study__card__text {
+  margin: 24px 0;
+}
+
+.study__title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #BDBDBD;
+  margin-bottom: 5px;
+}
+
+.study__subtitile {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #232523;
 }
 
 .stydy__wrapper-left {
@@ -1226,12 +1398,32 @@ html, body {
   }
 }
 
+@media screen and (max-width: 480px) {
+  .button {
+    padding: 15px 35px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 12px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .promo__wrapper-btn.button_main {
+    margin-bottom: 40px;
+    font-size: 16px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .button {
     padding: 10px 15px;
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
+  }
+  .button_main {
+    margin-top: 0px;
+    margin-bottom: 20px;
   }
 }
 
