--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*!
- * Bootstrap Reboot v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
- */
 *, ::after, ::before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -340,11 +333,6 @@ template {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
-}
-
-* {
-  font-family: 'Venus Rising', sans-serif;
-  font-weight: 700;
 }
 
 *, *::after, *::before {
@@ -789,7 +777,6 @@ html, body {
         -ms-flex-pack: center;
             justify-content: center;
     margin-top: 100px;
-    margin-bottom: 0px;
   }
   .container {
     padding: 5px 35px;
@@ -859,7 +846,6 @@ html, body {
         -ms-flex-pack: center;
             justify-content: center;
     margin-top: 100px;
-    margin-bottom: 0px;
   }
   .container {
     padding: 5px 35px;
@@ -910,7 +896,15 @@ html, body {
 
 .advantages__item {
   position: relative;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: calc(50% - 40px);
   padding: 22px 28px;
   margin-bottom: 40px;
@@ -919,8 +913,8 @@ html, body {
   border-radius: 10px;
   text-align: center;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 22px;
+  line-height: 24px;
 }
 
 .advantages__item span {
@@ -957,45 +951,48 @@ html, body {
   .advantages__item {
     padding: 10px 30px;
     margin: 0 20px 20px 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .advantages__item span {
     left: -16px;
     padding: 0px;
   }
-  .item-2 {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-  }
-  .item-3 {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-  }
-  .item-4 {
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3;
-  }
-  .item-5 {
-    -webkit-box-ordinal-group: 5;
-        -ms-flex-order: 4;
-            order: 4;
-  }
-  .item-6 {
+  .advantages__item:nth-child(2) {
     -webkit-box-ordinal-group: 6;
         -ms-flex-order: 5;
             order: 5;
   }
-  .item-7 {
+  .advantages__item:nth-child(3) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .advantages__item:nth-child(4) {
     -webkit-box-ordinal-group: 7;
         -ms-flex-order: 6;
             order: 6;
   }
-  .item-8 {
+  .advantages__item:nth-child(5) {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .advantages__item:nth-child(6) {
     -webkit-box-ordinal-group: 8;
         -ms-flex-order: 7;
             order: 7;
+  }
+  .advantages__item:nth-child(7) {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  .advantages__item:nth-child(8) {
+    -webkit-box-ordinal-group: 9;
+        -ms-flex-order: 8;
+            order: 8;
   }
 }
 
@@ -1037,309 +1034,6 @@ html, body {
   .advantages__descr {
     font-size: 15px;
   }
-}
-
-.mentors {
-  padding-bottom: 120px;
-}
-
-.mentors__header {
-  position: relative;
-}
-
-.mentors__header .title__more {
-  position: absolute;
-  right: 0;
-  top: 0;
-  font-family: 'Roboto';
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-  -moz-text-decoration-line: underline;
-}
-
-.mentors__header .title__more span i {
-  margin-left: 25px;
-}
-
-.mentors__wrapper * {
-  font-family: 'Roboto';
-}
-
-.mentors__wrapper {
-  /* Auto layout */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: -20px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.mentors__card {
-  max-width: calc(25% - 20px);
-  margin: 10px;
-  padding: 20px;
-  background: #FFFFFF;
-  border: 1px solid #DCE7FC;
-  border-radius: 10px;
-}
-
-.mentors__card > div img {
-  display: block;
-  padding-bottom: 24px;
-}
-
-.mentors__card > a {
-  font-family: 'Roboto';
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-  color: #297ABF;
-}
-
-.mentors__card > a span {
-  padding-left: 15px;
-}
-
-.mentors__blockstars {
-  padding-bottom: 24px;
-}
-
-.mentors__star {
-  width: 18px;
-  height: 18px;
-  padding-bottom: 24px;
-}
-
-.mentors__star {
-  color: #FD460E;
-}
-
-.mentors__star:hover {
-  color: #FD460E;
-  content: "<i class=" mentors__star fa-solid fa-star "></i>";
-}
-
-.mentors__card-title {
-  padding-bottom: 20px;
-}
-
-.mentors__card-text {
-  margin: 0;
-  padding-bottom: 20px;
-}
-
-.mentors__card-course {
-  padding-bottom: 20px;
-}
-
-.mentors__card-course span {
-  padding-top: 5px;
-  display: block;
-}
-
-.mentors__invite-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  color: #0B2235;
-}
-
-.mentors__invite-card > img {
-  padding-bottom: 25px;
-}
-
-.mentors__wrapper-btn {
-  text-align: center;
-}
-
-@media screen and (max-width: 1230px) {
-  .mentors__title {
-    width: 440px;
-  }
-  .mentors__header .title__more {
-    top: 70px;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 22px;
-  }
-  .title__more span i {
-    margin-left: 25px;
-  }
-  .mentors__card {
-    max-width: calc(50% - 20px);
-    margin: 10px;
-    padding: 15px 10px;
-    background: #FFFFFF;
-    border: 1px solid #DCE7FC;
-    border-radius: 10px;
-  }
-  .mentors__card > div img {
-    display: block;
-    padding-bottom: 24px;
-  }
-  .mentors__card * {
-    padding-bottom: 10px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .mentors__title.title {
-    font-size: 16px;
-  }
-  .mentors__header .title__more {
-    top: 30px;
-  }
-  .mentors__header .title__more span i {
-    margin-left: 15px;
-  }
-  .mentors__card {
-    background-color: #f00;
-    max-width: calc(100% - 20px);
-    margin: 10px;
-    padding: 15px 10px;
-    background: #FFFFFF;
-    border: 1px solid #DCE7FC;
-    border-radius: 10px;
-  }
-  .mentors__card > div img {
-    display: block;
-    padding-bottom: 24px;
-  }
-}
-
-.study {
-  margin-bottom: 120px;
-}
-
-.study__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.study__wrapper-left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 10px;
-  width: 50%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.study__position {
-  margin-left: 10px;
-  border: 1px solid #000;
-}
-
-.study__card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  min-height: 120px;
-  max-height: 120px;
-  height: 120px;
-  border: 1px solid #000;
-  border-radius: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.study__card__icon {
-  padding: 2px;
-  overflow: hidden;
-  margin: 19px 21px 19px 31px;
-  background: #0b2235;
-  background: radial-gradient(circle, #0b2235 83%, white 99%);
-}
-
-.study__card__icon img {
-  width: 71px;
-  height: 71px;
-}
-
-.study__wrapper-right {
-  padding: 52px 61px;
-  width: 50%;
-  border-radius: 10px;
-}
-
-.study__wrapper-right ul {
-  margin-bottom: 40px;
-}
-
-.study__wrapper-right ul,
-.study__wrapper-right ul li {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  color: #000000;
-}
-
-.study__wrapper-right ul li {
-  margin-left: 37px;
-}
-
-.study__card__text {
-  margin: 24px 0;
-}
-
-.study__title {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  color: #BDBDBD;
-  margin-bottom: 5px;
-}
-
-.study__subtitile {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  color: #232523;
-}
-
-.stydy__wrapper-left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .button {
