--- a/css/style.css
+++ b/css/style.css
@@ -1036,6 +1036,307 @@ html, body {
   }
 }
 
+.mentors__title.title {
+  margin-bottom: 50px;
+}
+
+.mentors {
+  padding-bottom: 120px;
+}
+
+.mentors__header {
+  position: relative;
+}
+
+.mentors__header .title__more {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  -moz-text-decoration-line: underline;
+}
+
+.mentors__header .title__more span i {
+  margin-left: 25px;
+}
+
+.mentors__wrapper * {
+  font-family: 'Roboto';
+}
+
+.mentors__card-desktop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: -40px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.mentors__card {
+  max-width: calc(25% - 40px);
+  margin: 10px;
+  padding: 20px;
+  background: #FFFFFF;
+  border: 1px solid #DCE7FC;
+  border-radius: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.mentors__card > div img {
+  display: block;
+  padding-bottom: 23px;
+}
+
+.mentors__card > a {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #297ABF;
+}
+
+.mentors__card > a span {
+  padding-left: 15px;
+}
+
+.mentors__blockstars {
+  padding-bottom: 24px;
+}
+
+.mentors__star {
+  width: 18px;
+  height: 18px;
+  padding-bottom: 24px;
+  color: #FD460E;
+}
+
+.mentors__card-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 28px;
+  color: #232523;
+  padding-bottom: 20px;
+}
+
+.mentors__card-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #232523;
+  /* Inside auto layout */
+  margin: 0;
+  padding-bottom: 20px;
+}
+
+.mentors__card-course {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #232523;
+  padding-bottom: 20px;
+}
+
+.mentors__card-course span {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #232523;
+  display: block;
+}
+
+.mentors__invite-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #0B2235;
+}
+
+.mentors__invite-card > img {
+  padding-bottom: 25px;
+}
+
+.mentors__wrapper-btn {
+  text-align: center;
+}
+
+.mentors__wrapper-btn .button-mobile,
+.mentors__card-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 1230px) {
+  .mentors__title {
+    width: 440px;
+  }
+  .mentors__header .title__more {
+    top: 70px;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .title__more span i {
+    margin-left: 25px;
+  }
+  .mentors__card {
+    max-width: calc(50% - 40px);
+    margin: 10px;
+    padding: 15px 10px;
+    background: #FFFFFF;
+    border: 1px solid #DCE7FC;
+    border-radius: 10px;
+  }
+  .mentors__card > div img {
+    display: block;
+    padding-bottom: 24px;
+  }
+  .mentors__card * {
+    padding-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .mentors__title.title {
+    font-size: 16px;
+    width: 220px;
+  }
+  .mentors__header .title__more {
+    top: 30px;
+  }
+  .mentors__header .title__more {
+    margin-left: 15px;
+    display: none;
+  }
+  .mentors__card {
+    background-color: #f00;
+    max-width: calc(100% - 20px);
+    margin: 10px;
+    padding: 15px 10px;
+    background: #FFFFFF;
+    border: 1px solid #DCE7FC;
+    border-radius: 10px;
+  }
+  .mentors__card > div img {
+    display: block;
+    padding-bottom: 24px;
+  }
+  .mentors__card * {
+    padding-top: 0px;
+  }
+  .card__box-top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .card__box-top-rigth {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-left: 7px;
+  }
+  .mentors__star {
+    font-weight: 400;
+    width: 7px;
+    height: 7px;
+    padding-bottom: 15px;
+    margin-right: 4px;
+    color: #FD460E;
+  }
+  .mentors__card-title {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
+    padding-bottom: 0;
+  }
+  .mentors__card-text {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .mentors__card-course {
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 11px;
+    padding-bottom: 20px;
+  }
+  .mentors__card-course span {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #232523;
+    display: block;
+  }
+  .card__box-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .card__box-bottom > a {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .mentors__wrapper-btn {
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .mentors__card-desktop,
+  .mentors__wrapper-btn button:nth-child(1) {
+    display: none;
+  }
+  .mentors__card-mobile {
+    display: block;
+  }
+  .mentors__wrapper-btn .button-mobile {
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+}
+
 .button {
   padding: 1.22rem 6.7rem;
   border-radius: 20px;
@@ -1089,6 +1390,12 @@ html, body {
     font-weight: 400;
     font-size: 15px;
     line-height: 12px;
+  }
+  .mentors__wrapper-btn .button-mobile {
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    padding: 10px 80px;
   }
 }
 
