--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,7 @@ html, body {
 }
 .header__phone {
   color: #232523;
+  font-family: 'Venus Rising';
 }
 
 .header__wrapper__link {
@@ -361,34 +362,17 @@ html, body {
   top: 0;
   left: 0;
   z-index: 50;
-}
-.header__wrapper::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(254, 255, 255);
-  z-index: 2;
+  padding-top: 30px;
+  background-color: #fff;
 }
 .header__wrapper .container {
   max-width: 1174px;
   margin: 0 auto;
 }
-.header__wrapper__body {
-  position: relative;
+.header__wrapper__body {  
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  height: 180px;
-}
-.header__wrapper__logo {
-  flex: 0 0 80px;
-  overflow: hidden;
-  text-decoration: none;
-  position: relative;
-  z-index: 3;
+  align-items: center;  
 }
 .header__wrapper__logo img {
   max-width: 100%;
