--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 body {
 	margin: 0;
 	font-family: Roboto, sans-serif;
+	color: #232523;
 }
 
 img {
@@ -425,5 +426,215 @@ ul {
 		font-size: 32px;
 		padding: 10px 0;
 		transform: translate(-45px, -50%);
+	}
+}
+
+section.tutors .section-title {
+	width: 206px;
+	text-transform: uppercase;
+}
+
+section.tutors .tutors-card {
+	width: 100%;
+	padding: 15px;
+	border: 1px solid #dce7fc;
+	border-radius: 10px;
+	box-sizing: border-box;
+	display: grid;
+	row-gap: 10px;
+	font-size: 14px;
+}
+
+section.tutors .tutors-card:nth-child(n+4) {
+	display: none;
+}
+
+section.tutors .tutors-card__wrap {
+	display: grid;
+	row-gap: 20px;
+	margin-bottom: 20px;
+}
+
+section.tutors .tutors-card__top {
+	display: grid;
+	grid-template-rows: auto auto;
+	grid-template-columns: auto 1fr;
+	grid-template-areas: "img name""rate rate";
+	column-gap: 5px;
+}
+
+section.tutors .tutors-card__img {
+	width: 40px;
+	height: 40px;
+	grid-area: img;
+	grid-row-end: 3;
+}
+
+section.tutors .tutors-card__name {
+	grid-area: name;
+	font-weight: 600;
+	font-size: 15px;
+	line-height: 18px;
+	margin-top: 5px;
+}
+
+section.tutors .tutors-card__rate {
+	grid-area: rate;
+	height: 15px;
+	grid-column-start: 2;
+	display: flex;
+	align-items: center;
+	gap: 3px;
+}
+
+section.tutors .tutors-card__rate i {
+	font-size: 8px;
+	color: #fd460e;
+}
+
+section.tutors .tutors-card__info .tutors-card__description {
+	margin-bottom: 10px;
+}
+
+section.tutors .tutors-card__course {
+	display: grid;
+	grid-template-areas: "title title""curs_name link";
+	grid-template-columns: 1fr auto;
+}
+
+section.tutors .tutors-card__course p:nth-child(1) {
+	margin-bottom: 5px;
+	grid-area: title;
+}
+
+section.tutors .tutors-card__course p:nth-child(2) {
+	grid-area: curs_name;
+}
+
+section.tutors .tutors-card__course a {
+	grid-area: link;
+	text-decoration: underline;
+	color: #297abf;
+}
+
+section.tutors .tutors-card__course a:after {
+	content: "";
+	width: 14px;
+	height: 9px;
+	display: inline-block;
+	background-image: url(../img/tutor-card-arrow.svg);
+	background-repeat: no-repeat;
+	margin-left: 3px;
+}
+
+section.tutors .tutors-card.became-tutor {
+	height: 110px;
+	border: 1px solid #0b2235;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	gap: 17px;
+}
+
+section.tutors .tutors-card.became-tutor p {
+	font-weight: 700;
+	font-size: 14px;
+}
+
+section.tutors .tutors-card.became-tutor .tutors-card__img {
+	width: 25px;
+	height: 25px;
+}
+
+@media screen and (min-width:1024px) {
+
+	.advantages,
+	section.tutors {
+		margin-bottom: 120px;
+	}
+
+	section.tutors .section-title {
+		width: 100%;
+		margin-bottom: 60px;
+	}
+
+	section.tutors .tutors-card__wrap {
+		grid-template-columns: repeat(4, 1fr);
+		column-gap: 18px;
+		margin-bottom: 60px;
+	}
+
+	section.tutors .tutors-card {
+		row-gap: 25px;
+	}
+
+	section.tutors .tutors-card:nth-child(n+4) {
+		display: grid;
+	}
+
+	section.tutors .tutors-card__top {
+		column-gap: 9px;
+		row-gap: 20px;
+		grid-template-rows: 1fr 20px auto;
+		grid-template-columns: auto;
+		grid-template-areas: "img img""name name""rate rate";
+	}
+
+	section.tutors .tutors-card__img {
+		width: 60px;
+		height: 60px;
+		grid-area: img;
+		grid-row-end: 2;
+	}
+
+	section.tutors .tutors-card__name {
+		grid-area: name;
+		font-size: 24px;
+		display: flex;
+		align-items: center;
+		line-height: 28px;
+		grid-row-start: 4;
+		grid-column-start: 1;
+		margin-top: 0;
+	}
+
+	section.tutors .tutors-card__rate {
+		grid-column-start: 1;
+		grid-row-start: 2;
+		gap: 12px;
+		height: 20px;
+	}
+
+	section.tutors .tutors-card__rate i {
+		font-size: 18px;
+	}
+
+	section.tutors .tutors-card__info .tutors-card__description {
+		margin-bottom: 20px;
+	}
+
+	section.tutors .tutors-card__course {
+		grid-template-areas: "title title""curs_name curs_name""link link";
+	}
+
+	section.tutors .tutors-card__course p:nth-child(1) {
+		font-size: 12px;
+	}
+
+	section.tutors .tutors-card__course-link {
+		margin-top: 20px;
+	}
+
+	section.tutors .tutors-card__course a:after {
+		margin-left: 15px;
+	}
+
+	section.tutors .tutors-card.became-tutor {
+		height: auto;
+		border: 2px solid #0b2235;
+		display: flex;
+		gap: 32px;
 	}
 }
