--- a/css/main.css
+++ b/css/main.css
@@ -1046,6 +1046,74 @@ section.feedback .tutors-card__tutor {
   display: none;
 }
 
+.faq {
+  margin-bottom: 20px;
+}
+
+.accordion {
+  display: grid;
+  row-gap: 10px;
+}
+
+.accordion__item {
+  border: 1px solid #dce7fc;
+  border-radius: 10px;
+  padding: 7.5px 15px;
+  font-size: 14px;
+  line-height: 120%;
+  overflow: hidden;
+}
+
+.accordion__item.active .accordion__content {
+  padding-top: 10px;
+  border-top: .5px solid #dce7fc;
+  transition: .5s;
+}
+
+.accordion__item.active .accordion__header {
+  margin-bottom: 8px;
+}
+
+.accordion__item.active .accordion__header::after {
+  transform: rotate(180deg);
+  transition: .5s;
+}
+
+.accordion__content {
+  position: relative;
+  overflow: hidden;
+  font-size: 9px;
+  max-height: 0;
+  transition: .5s;
+}
+
+.accordion__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.accordion__header::after {
+  content: "";
+  width: 9px;
+  height: 8px;
+  display: inline-block;
+  background-image: url(../img/faq-arrow.svg);
+  background-repeat: no-repeat;
+  transition: .5s;
+}
+
+@media(min-width:576px) {
+  .accordion__item {
+    font-size: 24px;
+  }
+
+  .accordion .accordion__content {
+    font-size: 16px;
+  }
+}
+
 @media(min-width:992px) {
   section.feedback {
     margin-bottom: 55px;
@@ -1097,5 +1165,14 @@ section.feedback .tutors-card__tutor {
   section.feedback .tutors-card__tutor p:first-child {
     font-size: 12px;
     margin-bottom: 5px;
+  }
+
+  .faq {
+    margin-bottom: 120px;
+  }
+
+  .accordion__item {
+    padding: 28px 20px;
+    line-height: 120%;
   }
 }
